[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/White Rabbit/White Rabbit.png" type="Texture" id=1]
[ext_resource path="res://Scripts/White Rabbit.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 122.0
height = 302.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 248, 412.5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 268, 304 )

[node name="White Rabbit" type="KinematicBody2D"]
scale = Vector2( 0.5, 0.5 )
collision_layer = 4
collision_mask = 2
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Left Detector" type="Area2D" parent="."]
position = Vector2( -470, 0 )
collision_layer = 0
collision_mask = 2
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Left Detector"]
position = Vector2( 107, -130.5 )
shape = SubResource( 2 )

[node name="Right Detector" type="Area2D" parent="."]
position = Vector2( 316, 2 )
collision_layer = 0
collision_mask = 2
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Right Detector"]
position = Vector2( 47, -130.5 )
shape = SubResource( 2 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( -294, -492 )

[node name="Interact Checker" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Interact Checker"]
position = Vector2( 0, -24 )
shape = SubResource( 3 )

[connection signal="body_entered" from="Left Detector" to="." method="_on_Left_Detector_body_entered"]
[connection signal="body_entered" from="Right Detector" to="." method="_on_Right_Detector_body_entered"]
[connection signal="body_entered" from="Interact Checker" to="." method="_on_Interaction_prompt_body_entered"]
[connection signal="body_exited" from="Interact Checker" to="." method="_on_Interaction_prompt_body_exited"]
